# PROARC-ServerV2

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  colorspng
crates/proarc_connection/: Cargo.toml
crates/proarc_connection/src/: conn.rs
crates/proarc_database/: Cargo.toml
crates/proarc_database/src/: auth.rs  conn.rs  lib.rs  sql_queries.rs
crates/proarc_database/tests/: tests_database.rs
crates/proarc_file_transfer/: Cargo.toml
crates/proarc_file_transfer/src/: file.rs
crates/proarc_utils/: Cargo.toml
crates/proarc_utils/src/: lib.rs
scripts/: clean_database.py  client.py
sql/tables/historico_situacao/: down.sql  up.sql
sql/tables/motivo/: down.sql  up.sql
sql/tables/procurador/: down.sql  up.sql
sql/tables/reclamacao/: down.sql  up.sql
sql/tables/reclamado/: down.sql  up.sql
sql/tables/reclamante/: down.sql  up.sql
sql/tables/usuario/: down.sql  up.sql
src/: actions.rs  auth.rs  lib.rs  main.rs
tests/: auth.py  db.py  file.py  init.rs  test_auth.rs  tests_auth.rs  tests_db.rs  tests_file.rs  tests_init.rs  try_conn.py
