[workspace]
members = [
    "crates/*",
]

[package]
name = "PROARC-ServerV2"
version = "0.1.0"
edition = "2021"

[dependencies]
proarc_database = { path = "crates/proarc_database" }
proarc_file_transfer = { path = "crates/proarc_file_transfer" }
proarc_connection = { path = "crates/proarc_connection" }

tokio = { version = "1.0", features = ["full"] }